--- a/Makefile.am
+++ b/Makefile.am
@@ -18,7 +18,8 @@ memcached_SOURCES = memcached.c memcached.h \
                     thread.c daemon.c \
                     stats.c stats.h \
                     util.c util.h \
-                    trace.h cache.h sasl_defs.h
+                    trace.h cache.h sasl_defs.h	\
+		    libasyncos.c libasyncos.h libasyncos-util.h
 
 if BUILD_CACHE
 memcached_SOURCES += cache.c
